@@ -1,6 +1,6 @@
 use strict;
 use warnings;
-use Test::More tests => 6;
+use Test::More tests => 10;
 
 use_ok('st::api::base');
 
@@ -11,6 +11,15 @@ use_ok('st::api::base');
   like($base->dev_url(), qr/dev\.psd/, 'dev_url');
   is((scalar $base->fields()), undef, 'no default fields');
   is($base->primary_key(), undef, 'no default pk');
+
+  is($base->lims_url(), $base->live_url(),'live url returned');
+  is($base->service(),  $base->live_url() . q[/],'live url returned');
+  {
+    local $ENV{'dev'} = 'some';
+    is($base->lims_url(), $base->dev_url(), 'dev url returned');
+    is($base->service(),  $base->dev_url() . q[/],'dev url returned');
+  }
+
 }
 
 1;
