@@ -1,6 +1,7 @@
 CHANGES
 
  - default to in-memory option for SQLite in tests
+ - added a method to transparently return live or dev LIMs base URL
 
 release 80.9
  - do not try to infer phix reference from library/sample name
